The site's layout and stuff looks alright. Tags are also proper. Next update should be a proper post

--- a/404.html
+++ b/404.html
@@ -35,6 +35,9 @@
             <li>
               <a href="/about">About</a>
             </li>
+            <li>
+              <a href="/tags">Tags</a>
+            </li>
           </ul>
           <p>&copy; 2015 Dushyant Mehta </p>
         </div>
@@ -43,8 +46,8 @@
 
     <div class="content container">
       <h1>Where are you going?</h1>
-      <p class="lead">Are you lost? Can't find what you were looking for? Visit the <a href="/">home page</a> or the tags page to see if you can find it manually. Good luck!</p>      
+      <p class="lead">Are you lost? Can't find what you were looking for? Visit the <a href="/">home page</a> or check out the <a href="/tags">tags page</a> to find your bearings manually. Good luck!</p>      
     </div>
-
+	
   </body>
 </html>
